--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>node.js Simple Chat App</title>
+		<script src="/socket.io/socket.io.js"></script>
         <script src="http://code.jquery.com/jquery.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
         <script>
-            var socket = io.connect();
+            var socket = io.connect('http://localhost');
 
             $(document).ready(function(){
                 socket.on("chat", function(data){
