--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<script src="/socket.io/socket.io.js"></script>
         <script src="http://code.jquery.com/jquery.min.js"></script>
         <script>
-            var socket = io.connect('http://localhost');
+            var socket = io.connect();
 
             $(document).ready(function(){
                 socket.on("chat", function(data){
